--- a/scripts/efi_loader/loader/entries/install.conf
+++ b/scripts/efi_loader/loader/entries/install.conf
@@ -1,4 +1,4 @@
 title install
 linux /vmlinuz
 initrd /initrd
-options LABEL=install-efi  console=ttyS0,115200 console=tty0
+options LABEL=install-efi  console=ttyS0,115200 console=tty0 root=/dev/ram0
